--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <tr>
           <td>
             <ul>
-              <li>Agile/Scru, methadology</li>
+              <li>Agile/Scrum methadology</li>
               <li>performance and scalability</li>
             </ul>
           </td>
